--- a/blog.html
+++ b/blog.html
@@ -9,17 +9,18 @@
 </head>
 <body>
     <header>
+        <h1>Blog Posts</h1>
         <button id="mode-toggle">Light Mode</button>
         <button id="back-btn">Back</button>
     </header>
 
     <main id="posts-container">
-        <h1>Blog Posts</h1>
         <ul id="post-list"></ul>
     </main>
 
     <footer>
         <p>Developer Portfolio: <a href="https://your-portfolio.com" target="_blank">Your Name</a></p>
+        <p>Made with ❤️ 2024</p>
     </footer>
 
     <script src="./assets/js/blog.js"></script>
