final touches, added live images

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
     </main>
 
     <footer>
-        <p>Developer Portfolio: <a href="https://your-portfolio.com" target="_blank">Your Name</a></p>
+        <p>Portfolio: <a id="developer-link" href="https://your-portfolio.com" target="_blank">Developer</a></p>
         <p>Made with ❤️ 2024</p>
     </footer>
 
